[gd_scene load_steps=7 format=3 uid="uid://2fn8jb7l7xpi"]

[ext_resource type="Script" path="res://planets/jupiter/jupiter.gd" id="1_2rx63"]
[ext_resource type="PackedScene" uid="uid://sc8xm7aym51d" path="res://player/player.tscn" id="2_r5jse"]
[ext_resource type="Texture2D" uid="uid://bmxowqwctb54t" path="res://pics/bg/mercury_background.png" id="3_m7dp1"]
[ext_resource type="Texture2D" uid="uid://dmwqoxayeudod" path="res://pics/mockup/Red_circle.svg.png" id="4_ovbk8"]
[ext_resource type="PackedScene" uid="uid://bob5f2sxvlmc0" path="res://player/player_interface.tscn" id="5_511ea"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ugq43"]
radius = 30.5941

[node name="jupiter" type="Node2D"]
script = ExtResource("1_2rx63")
player = ExtResource("2_r5jse")

[node name="bg" type="Sprite2D" parent="."]
self_modulate = Color(0.941176, 0.54902, 0.172549, 1)
position = Vector2(576, 322)
texture = ExtResource("3_m7dp1")

[node name="spawn_player" type="Marker2D" parent="."]
position = Vector2(830, 468)

[node name="takeoff" type="Area2D" parent="spawn_player" groups=["takeoff"]]

[node name="takeoff" type="Sprite2D" parent="spawn_player/takeoff"]
scale = Vector2(0.083, 0.083)
texture = ExtResource("4_ovbk8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawn_player/takeoff"]
shape = SubResource("CircleShape2D_ugq43")

[node name="player_interface" parent="." instance=ExtResource("5_511ea")]

[connection signal="area_entered" from="spawn_player/takeoff" to="." method="_on_takeoff_area_entered"]
[connection signal="area_exited" from="spawn_player/takeoff" to="." method="_on_takeoff_area_exited"]
